--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
 
-   
+
   </div>
   <div class="row p-2">
     <div class="col">
@@ -18,13 +18,14 @@
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
-            <label for="docType" class="col-sm-2 col-form-label">Document Type<span
-                style="color: red; font-weight: bolder;">*</span></label>
+            <label for="docType" class="col-sm-2 col-form-label">
+              Document Type<span style="color: red; font-weight: bolder;">*</span>
+            </label>
             <div class="col-sm-10">
               <p-dropdown name="docType" [options]="typeSource" [(ngModel)]="request.documenttype"
-                optionLabel="Documenttypename" optionValue="Documenttypename" [disabled]="viewMode"
-                [autoDisplayFirst]="false" [required]="true"
-                #DocumenttypeInput="ngModel" placeholder="Select Document Type" (onChange)="onChange()">
+                          optionLabel="Documenttypename" optionValue="Documenttypename" [disabled]="viewMode"
+                          [autoDisplayFirst]="false" [required]="true"
+                          #DocumenttypeInput="ngModel" placeholder="Select Document Type" (onChange)="onChange()">
               </p-dropdown>
               <div *ngIf="DocumenttypeInput.invalid && (DocumenttypeInput.dirty || DocumenttypeInput.touched)" class="text-danger">
                 Document Type is Required.
@@ -36,11 +37,11 @@
             <label for="reqCode" class="col-sm-2 col-form-label">Request Code</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="reqCode" name="reqCode" placeholder="System Generated"
-                [(ngModel)]="request.drid" [disabled]="viewMode||editMode" readonly />
+                     [(ngModel)]="request.drid" [disabled]="viewMode||editMode" readonly />
             </div>
           </div>
 
-        
+
 
           <!-- <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label">Department<span
@@ -60,31 +61,33 @@
             <label for="department" class="col-sm-2 col-form-label">Department</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="Department" name="Department" placeholder="Select Departmnet"
-              [(ngModel)]="request.department" readonly [disabled]="viewMode"/>
+                     [(ngModel)]="request.department" readonly [disabled]="viewMode" />
             </div>
           </div>
 
           <div class="form-group row">
-            <label for="purpose" class="col-sm-2 col-form-label">Purpose<span
-              style="color: red; font-weight: bolder;">*</span></label>
+            <label for="purpose" class="col-sm-2 col-form-label">
+              Purpose<span style="color: red; font-weight: bolder;">*</span>
+            </label>
             <div class="col-sm-10">
               <textarea class="form-control mw-350" id="purpose" name="purpose" rows="3" placeholder="Purpose"
-                [(ngModel)]="request.purpose" [disabled]="viewMode" required #purposeInput="ngModel">
+                        [(ngModel)]="request.purpose" [disabled]="viewMode" required #purposeInput="ngModel">
               </textarea>
               <div *ngIf="purposeInput.invalid && (purposeInput.dirty || purposeInput.touched)" class="text-danger">
                 Give Your Purpose.
-             </div>
+              </div>
             </div>
-           
+
           </div>
           <div class="form-group row">
-          <!-- <div class="form-group row" *ngIf="request.status=='Rejected' || request.status=='In-Progress' || request.status==''"> -->
-            <label for="workflow" class="col-sm-2 col-form-label">Workflow<span
-                style="color: red; font-weight: bolder;">*</span></label>
+            <!-- <div class="form-group row" *ngIf="request.status=='Rejected' || request.status=='In-Progress' || request.status==''"> -->
+            <label for="workflow" class="col-sm-2 col-form-label">
+              Workflow<span style="color: red; font-weight: bolder;">*</span>
+            </label>
             <div class="col-sm-10">
               <p-dropdown name="workflow" [options]="workflowsSource" [(ngModel)]="request.workflow"
-                optionLabel="workflowName" optionValue="workflowName" [disabled]="viewMode || editMode" [required]="true"
-                [autoDisplayFirst]="false" #WorkFlowInput="ngModel" placeholder="Select Workflow">
+                          optionLabel="workflowName" optionValue="workflowName" [disabled]="viewMode || editMode" [required]="true"
+                          [autoDisplayFirst]="false" #WorkFlowInput="ngModel" placeholder="Select Workflow">
               </p-dropdown>
               <div *ngIf="WorkFlowInput.invalid && (WorkFlowInput.dirty || WorkFlowInput.touched)" class="text-danger">
                 Workflow is required.
@@ -92,22 +95,22 @@
             </div>
           </div>
 
-         
+
 
         </div>
 
-       
+
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
             <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">
               Cancel
             </button>
             <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid || isButtonDisabled">Submit</button>
-            
+
             <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve(template)">Proceed</button>
             <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="return(template)">Return</button>
             <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject(template)">Reject</button> -->
-            
+
           </div>
         </div>
       </form>
