--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -1,101 +1,99 @@
 <div class="container-fluid">
   <div class="row p-2">
-      <div class="col">
-          <div class="d-flex justify-content-between align-items-center">
-            <h4 class="page-title flex-grow-1">Document Effective</h4>
+    <div class="col">
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="page-title flex-grow-1">Document Effective</h4>
 
-              <div class="back-icon" style="margin-right: 10px;">
-                  <a href="javascript:void(0);" onclick="history.back();">
-                      <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-                  </a>
-              </div>
-              
-              <div class="d-flex page-title-actions">
-                  <div class="input-group custom-input-group">
-                      <!-- Magnifying glass icon -->
-                      <span class="input-group-text custom-input-group-text">
-                          <i class="fas fa-search custom-search-icon"></i>
-                      </span>
-                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
-                  </div>
-                    
-              </div>
+        <div class="back-icon" style="margin-right: 10px;">
+          <a href="javascript:void(0);" onclick="history.back();">
+            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+          </a>
+        </div>
+
+        <div class="d-flex page-title-actions">
+          <div class="input-group custom-input-group">
+            <!-- Magnifying glass icon -->
+            <span class="input-group-text custom-input-group-text">
+              <i class="fas fa-search custom-search-icon"></i>
+            </span>
+            <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')" placeholder="Search" maxlength="250">
           </div>
+
+        </div>
       </div>
+    </div>
   </div>
   <div class="row p-2">
-      <div class="col">
-          <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table #templatesTable
-            [value]="effectivesDatasource"
-            [globalFilterFields]="['referenceId','documenttitle','documentno','documenttype','department','status']"
-            tableStyleClass="table table-striped" [rows]="itemsPerPage"
-              [paginator]="true" [totalRecords]="effectivesDatasource.length"
-              [rowsPerPageOptions]="rowsPerPageOptions"
-          >
-            <ng-template pTemplate="header">
-              <tr>
-                <th style="width: 60px">S.No</th>
-  
-                <th pSortableColumn="referenceId" style="width: 10%">
-                  Request Code<p-sortIcon field="referenceId"></p-sortIcon>
-                </th>
-                <th pSortableColumn="documenttitle" style="width: 20%">
-                  Document Title<p-sortIcon field="documenttitle"></p-sortIcon>
-                </th>
-                <th pSortableColumn="documentno" style="width: 10%">
-                  Document No<p-sortIcon field="documentno"></p-sortIcon>
-                </th>
-                <th pSortableColumn="documenttype" style="width: 20%">
-                  Document Type<p-sortIcon field="documenttype"></p-sortIcon>
-                </th>
-                <th pSortableColumn="department" style="width: 20%">
-                  Department<p-sortIcon field="department"></p-sortIcon>
-                </th>
-                <th pSortableColumn="status" style="width: 200px">
-                  Status <p-sortIcon field="status"></p-sortIcon>
-                </th>
-                <th class="text-center" style="width: 80px">Action</th>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-effective let-i="rowIndex">
-              <tr>
-                <td>{{ i + 1 }}</td>
-                <td *ngIf="!effective.isrevision">{{ effective.referenceId }}</td>
-                <td *ngIf="effective.isrevision">{{ effective.referenceId }}-Revision</td>
-                <td>{{ effective.documenttitle }}</td>
-                <td>{{ effective.documentno }}</td>
-                <td>{{ effective.documenttype }}</td>
-                <td>{{ effective.department }}</td>
-                <td>
-                  <span
-                    class="status"
-                    [ngClass]="getStatusClass(effective['status'])"
-                    >{{ effective.status }}
-                  </span>
-                </td>
-                <td class="text-center" *ngIf="access && effective?.status!=='Approved' && effective?.status !== 'Reviewed'">
-                  <a (click)="navigateToReviewEffective(effective)"
-                    ><i class="bi bi-arrow-right"></i
-                  ></a>
-                </td>
-                <td class="text-center" *ngIf="!access">
-                  <i class="bi bi-lock bi-lg" 
-                  [ngClass]="{'text-primary':true}"
-                  title="No Permissions">
-                  </i>
-                </td>
-                <td class="text-center" *ngIf="access && islocked(effective?.status)">
-                  <i class="bi bi-lock bi-lg" 
-                  [ngClass]="{'text-primary':true}"
-                  title="{{ 'Locked'}}">
-                  </i>
-                </td>
-              </tr>
-            </ng-template>
-          </p-table>
-          </div>
+    <div class="col">
+      <div class="p-4 bg-white shadow-dark rounded-2">
+        <p-table #templatesTable
+                 [value]="effectivesDatasource"
+                 [globalFilterFields]="['referenceId','documenttitle','documentno','documenttype','department','status']"
+                 tableStyleClass="table table-striped" [rows]="itemsPerPage"
+                 [paginator]="true" [totalRecords]="effectivesDatasource.length"
+                 [rowsPerPageOptions]="rowsPerPageOptions">
+          <ng-template pTemplate="header">
+            <tr>
+              <th style="width: 60px">S.No</th>
+
+              <th pSortableColumn="referenceId" style="width: 10%">
+                Request Code<p-sortIcon field="referenceId"></p-sortIcon>
+              </th>
+              <th pSortableColumn="documenttitle" style="width: 20%">
+                Document Title<p-sortIcon field="documenttitle"></p-sortIcon>
+              </th>
+              <th pSortableColumn="documentno" style="width: 10%">
+                Document No<p-sortIcon field="documentno"></p-sortIcon>
+              </th>
+              <th pSortableColumn="documenttype" style="width: 20%">
+                Document Type<p-sortIcon field="documenttype"></p-sortIcon>
+              </th>
+              <th pSortableColumn="department" style="width: 20%">
+                Department<p-sortIcon field="department"></p-sortIcon>
+              </th>
+              <th pSortableColumn="status" style="width: 200px">
+                Status <p-sortIcon field="status"></p-sortIcon>
+              </th>
+              <th class="text-center" style="width: 80px">Action</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-effective let-i="rowIndex">
+            <tr>
+              <td>{{ i + 1 }}</td>
+              <td *ngIf="!effective.isrevision">{{ effective.referenceId }}</td>
+              <td *ngIf="effective.isrevision">{{ effective.referenceId }}-Revision</td>
+              <td>{{ effective.documenttitle }}</td>
+              <td>{{ effective.documentno }}</td>
+              <td>{{ effective.documenttype }}</td>
+              <td>{{ effective.department }}</td>
+              <td>
+                <span class="status"
+                      [ngClass]="getStatusClass(effective['status'])">
+                  {{ effective.status }}
+                </span>
+              </td>
+              <td class="text-center" *ngIf="access && effective?.status!=='Approved' && effective?.status !== 'Reviewed'">
+                <a (click)="navigateToReviewEffective(effective)">
+                  <i class="bi bi-arrow-right"></i>
+                </a>
+              </td>
+              <td class="text-center" *ngIf="!access">
+                <i class="bi bi-lock bi-lg"
+                   [ngClass]="{'text-primary':true}"
+                   title="No Permissions">
+                </i>
+              </td>
+              <td class="text-center" *ngIf="access && islocked(effective?.status)">
+                <i class="bi bi-lock bi-lg"
+                   [ngClass]="{'text-primary':true}"
+                   title="{{ 'Locked'}}">
+                </i>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
       </div>
+    </div>
   </div>
 </div>
 
@@ -103,34 +101,35 @@
 <style>
   /* Styles for .custom-input-group */
   .custom-input-group {
-      background-color: white;
-      display: flex;
-      align-items: center;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
   }
+
   .custom-input-group-text {
-          background: white;
-          border: none;
-          padding: 0;
-          vertical-align: middle;
-      }
+    background: white;
+    border: none;
+    padding: 0;
+    vertical-align: middle;
+  }
 
-      .custom-search-icon {
-          font-size: 14px;
-          margin-right: 5px;
-          margin-left: 9px;
-          color: #555;
-      }
+  .custom-search-icon {
+    font-size: 14px;
+    margin-right: 5px;
+    margin-left: 9px;
+    color: #555;
+  }
 
-      .custom-input {
-          border: none;
-          padding: 5px;
-          vertical-align: middle;
-          background-color: white;
-          box-shadow: none;
-      }
-  </style>
+  .custom-input {
+    border: none;
+    padding: 5px;
+    vertical-align: middle;
+    background-color: white;
+    box-shadow: none;
+  }
+</style>
 
 
 
