--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -7,81 +7,65 @@
           <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
         </a>
       </div>
-    </div>   
+    </div>
   </div>
   <div class="row p-2">
     <div class="col">
       <form (ngSubmit)="saveEffective()" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
-          
+
 
 
           <div class="form-group row">
-            <label for="documentTitle" class="col-sm-2 col-form-label"
-              >Document Title</label
-            >
+            <label for="documentTitle" class="col-sm-2 col-form-label">Document Title</label>
             <div class="col-sm-10">
-              <input
-                type="text"
-                class="form-control"
-                id="documentTitle"
-                name="documentTitle"
-                placeholder="Document Title"
-                [(ngModel)]="effective.documenttitle" 
-                readonly
-              />
-            </div>
-          </div>
-
-          <div class="form-group row" >
-            <label for="documentNumber" class="col-sm-2 col-form-label"
-              >Document No</label
-            >
-            <div class="col-sm-10">
-              <input
-                type="text"
-                class="form-control"
-                id="documentNumber"
-                name="documentNumber"
-                placeholder="System Generated"
-                [(ngModel)]="effective.documentno" 
-                readonly
-              />
+              <input type="text"
+                     class="form-control"
+                     id="documentTitle"
+                     name="documentTitle"
+                     placeholder="Document Title"
+                     [(ngModel)]="effective.documenttitle"
+                     readonly />
             </div>
           </div>
 
           <div class="form-group row">
-            <label for="docType" class="col-sm-2 col-form-label"
-              >Document Type</label
-            >
+            <label for="documentNumber" class="col-sm-2 col-form-label">Document No</label>
             <div class="col-sm-10">
-              <input
-              type="text"
-              class="form-control"
-              id="docType"
-              name="docType"
-              placeholder="Document Type"
-              [(ngModel)]="effective.documenttype" 
-              readonly
-            />
+              <input type="text"
+                     class="form-control"
+                     id="documentNumber"
+                     name="documentNumber"
+                     placeholder="System Generated"
+                     [(ngModel)]="effective.documentno"
+                     readonly />
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="docType" class="col-sm-2 col-form-label">Document Type</label>
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control"
+                     id="docType"
+                     name="docType"
+                     placeholder="Document Type"
+                     [(ngModel)]="effective.documenttype"
+                     readonly />
             </div>
           </div>
 
 
           <div class="form-group row">
-            <label for="department" class="col-sm-2 col-form-label"
-              >Department</label
-            >
+            <label for="department" class="col-sm-2 col-form-label">Department</label>
             <div class="col-sm-10">
-              <input
-              type="text"
-              class="form-control"
-              id="department"
-              name="department"
-              placeholder="Department"
-              [(ngModel)]="effective.department" 
-              readonly
-            />
+              <input type="text"
+                     class="form-control"
+                     id="department"
+                     name="department"
+                     placeholder="Department"
+                     [(ngModel)]="effective.department"
+                     readonly />
             </div>
           </div>
 
@@ -91,48 +75,44 @@
               <a class="link-opacity-100-hover" (click)="checkduplicatetemplate(template)" href="javascript:void(0)">View Document</a>
             </div>
           </div>
-          
+
 
           <div class="form-group row">
             <label for="effectiveDate" class="col-sm-2 col-form-label">Effective Date</label>
             <div class="col-sm-10">
-              <input
-              type="date"
-              class="form-control w-150"
-              id="effectiveDate"
-              name="effectiveDate"
-              placeholder="Effective Date"
-              [(ngModel)]="effective.effectiveDate" [disabled]="viewMode" required #effectiveDateInput="ngModel"
-            />
-            <div *ngIf="effectiveDateInput.invalid && (effectiveDateInput.dirty || effectiveDateInput.touched)"
-            class="text-danger">
-            Effective Date is required.
-          </div>
+              <input type="date"
+                     class="form-control w-150"
+                     id="effectiveDate"
+                     name="effectiveDate"
+                     placeholder="Effective Date"
+                     [(ngModel)]="effective.effectiveDate" [disabled]="viewMode" required #effectiveDateInput="ngModel" />
+              <div *ngIf="effectiveDateInput.invalid && (effectiveDateInput.dirty || effectiveDateInput.touched)"
+                   class="text-danger">
+                Effective Date is required.
+              </div>
             </div>
-            
+
           </div>
 
           <div class="form-group row">
             <label for="reviewDate" class="col-sm-2 col-form-label">Review Date</label>
             <div class="col-sm-10">
-                <input
-                type="date"
-                class="form-control w-150"
-                id="reviewDate"
-                name="reviewDate"
-                placeholder="Review Date"
-                [(ngModel)]="effective.reviewDate" [disabled]="viewMode"
-              />
+              <input type="date"
+                     class="form-control w-150"
+                     id="reviewDate"
+                     name="reviewDate"
+                     placeholder="Review Date"
+                     [(ngModel)]="effective.reviewDate" [disabled]="viewMode" />
             </div>
           </div>
-      
-         
 
-       
 
-        
 
-        
+
+
+
+
+
           <div class="form-group row">
             <label for="workflow" class="col-sm-2 col-form-label">Workflow</label>
             <!-- <div class="col-sm-10">
@@ -140,14 +120,14 @@
                 readonly [disabled]="viewMode"/>
             </div> -->
             <div class="col-sm-10">
-            <p-dropdown name="workflow" [options]="workflowsourcedata" [(ngModel)]="effective.workflow"
-            optionLabel="workflowName" optionValue="workflowName" [disabled]="viewMode || editMode" [required]="true"
-            [autoDisplayFirst]="false" #WorkFlowInput="ngModel">
-          </p-dropdown>
+              <p-dropdown name="workflow" [options]="workflowsourcedata" [(ngModel)]="effective.workflow"
+                          optionLabel="workflowName" optionValue="workflowName" [disabled]="viewMode || editMode" [required]="true"
+                          [autoDisplayFirst]="false" #WorkFlowInput="ngModel">
+              </p-dropdown>
             </div>
-          <div *ngIf="WorkFlowInput.invalid && (WorkFlowInput.dirty || WorkFlowInput.touched)" class="text-danger">
-            Workflow is required.
-          </div>
+            <div *ngIf="WorkFlowInput.invalid && (WorkFlowInput.dirty || WorkFlowInput.touched)" class="text-danger">
+              Workflow is required.
+            </div>
           </div>
           <!-- <div class="form-group row">
             <label for="workflow" class="col-sm-2 col-form-label"
@@ -166,28 +146,26 @@
             </div>
           </div> -->
 
-         
 
-        
 
-       
+
+
+
         </div>
 
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
-            <button
-              type="button"
-              class="btn btn-outline-secondary mx-2"
-              (click)="onCancel()"
-            >
+            <button type="button"
+                    class="btn btn-outline-secondary mx-2"
+                    (click)="onCancel()">
               Cancel
             </button>
             <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid || isButtonDisabled">Submit</button>
-           
+
             <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="Proceed(eSignModal)">Proceed</button>
-          <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="return(eSignModal)">Return</button>
-          <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject(eSignModal)">Reject</button> -->
-          
+            <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="return(eSignModal)">Return</button>
+            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject(eSignModal)">Reject</button> -->
+
           </div>
         </div>
 
