--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
@@ -21,7 +21,9 @@
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="submit(adddoc)" #fm="ngForm">
+     
+        <form (ngSubmit)="submit(newplant)" #fm="ngForm">
+        
 
       
         <div class="p-4 bg-white shadow-dark rounded-2">
@@ -34,7 +36,7 @@
                      id="plantname"
                      name="plantname"
                      placeholder="Enter Plant Name" 
-                     [(ngModel)]="adddoc.PlantName"
+                     [(ngModel)]="newplant.PlantName"
                      maxlength="50"
                      required
                      #plantnameInput="ngModel"  />
@@ -54,7 +56,7 @@
                 id="plantcode"
                 name="plantcode"
                 placeholder="Enter Plant Code"
-                [(ngModel)]="adddoc.PlantCode"
+                [(ngModel)]="newplant.PlantCode"
                 maxlength="6"
                 required
                 [disabled]="editMode"
@@ -85,7 +87,7 @@
                         rows="3"
                         maxlength="250"
                         placeholder="Enter Plant Address"
-                        [(ngModel)]="adddoc.PlantAddress"  required
+                        [(ngModel)]="newplant.PlantAddress"  required
                         #descriptionInput="ngModel">
                       </textarea>
                       <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
@@ -102,7 +104,7 @@
                         maxlength="250"
                         rows="3"
                         placeholder="Comments"
-                        [(ngModel)]="adddoc.Comments" [disabled]="viewMode"
+                        [(ngModel)]="newplant.Comments" [disabled]="viewMode"
                          
                         #commentsCxhvcjInput="ngModel"
                         
@@ -121,8 +123,8 @@
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
             <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-            <button type="submit" class="btn btn-primary" *ngIf="!editMode" (click)="submit(adddoc)" [disabled]="!fm.form.valid">Submit</button>
-            <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid || isButtonDisabled">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="editMode" [disabled]="!fm.form.valid || isButtonDisabled">Update</button>
           </div>
         </div>
 
