--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -97,7 +97,7 @@
 
          
           <div *ngIf="viewMode" class="form-group row">
-            <label for="reason" class="col-sm-2 col-form-label">Reason(return/reject)</label>
+            <label for="reason" class="col-sm-2 col-form-label">Reason(s)/Remark(s)</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="reason" name="reason"
                 [(ngModel)]="request.reason" #reasonInput="ngModel" [required]="true"/>
