--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -114,10 +114,10 @@
               <div class="col-sm-10">
                 <p-dropdown name="template" [options]="templatesSource" [(ngModel)]="preparation.template"
                 optionLabel="Templatename" optionValue="Templatename" [disabled]="istemplate || viewMode" [required]="true"
-                            [autoDisplayFirst]="false" #templateInput="ngModel" placeholder="Select Template">
+                            [autoDisplayFirst]="false" #templateInput="ngModel" placeholder="Select Template" (onChange)="istemplatecheck($event);">
                 </p-dropdown>
-                <a class="col-sm-2 mx-2" *ngIf="preparation.template!=null && preparation.template!=undefined && preparation.template!='' && !viewMode" href="javascript:void(0)" (click)="edittemplate(preparation.template)">Modify</a>
-                <a class="col-sm-2 mx-2" *ngIf="preparation.template!=null && preparation.template!=undefined && preparation.template!='' && viewMode" href="javascript:void(0)" (click)="checkduplicatetemplate(template)">View Document</a>
+                <a class="col-sm-2 mx-2" *ngIf="preparation.template!=null && istemplate && !viewMode" href="javascript:void(0)" (click)="edittemplate(preparation.template)">Modify</a>
+                <a class="col-sm-2 mx-2" *ngIf="preparation.template!=null && istemplate && viewMode" href="javascript:void(0)" (click)="checkduplicatetemplate(template)">View Document</a>
                 <div *ngIf="templateInput.invalid && (templateInput.dirty || templateInput.touched)" class="text-danger">
                   Template is required
                 </div>
