--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -17,8 +17,7 @@
                             <i class="fas fa-search custom-search-icon"></i>
                         </span>
                         <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
-                    </div>
-                      
+                    </div>               
                     <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddTemplate()" *ngIf="access">New</button>
                 </div>
             </div>
@@ -59,7 +58,7 @@
                             <a href="javascript:void(0)" (click)="previewtemplate(template1,template)">Preview</a>
                         </td>  -->
                         <!-- <td><span class="status" [ngClass]="{'status-completed':true}">{{template?.Status}} </span>&nbsp;&nbsp;<i class="bi bi-copy" title="Clone" (click)="CopyTemplate(template,template2)"></i></td> -->
-                        <td><span class="status" [ngClass]="{'status-completed':true}">{{template?.Status}} </span>&nbsp;&nbsp;<a href="javascript:void(0)" title="Clone" (click)="CopyTemplate(template,template2)">Clone</a></td>
+                        <td><span class="status" [ngClass]="{'status-completed':true}">{{template?.Status}} </span></td>
                         <td class="text-center" *ngIf="access && !template?.IsParent"><i (click)="editdoc(template)" class="bi bi-pencil"></i></td>
                         <td class="text-center" *ngIf="!access">
                             <i class="bi bi-lock bi-lg" 
