--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -61,10 +61,41 @@
 
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label">Department</label>
+
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="Department" name="Department" placeholder="Select Departmnet"
-                     [(ngModel)]="request.department" readonly [disabled]="viewMode" />
+              <p-multiSelect [options]="departmentInfo"
+                             [(ngModel)]="selectedDepartments"
+                             placeholder="Select Department"
+                             name="Department"
+                             optionLabel="label"
+                             display="chip"
+                             [required]="true"
+                             #departmentInput="ngModel">
+              </p-multiSelect>
+              <!-- Validation Message -->
+              <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
+                Department is required
+              </div>
             </div>
+
+              <!--<div class="col-sm-10">
+    <p-multiSelect [options]="departmentInfo"
+                   [(ngModel)]="request.department"
+                   placeholder="Select Department"
+                   name="Department"
+                   optionLabel="DepartmentName"
+                   display="chip"
+                   [required]="true"
+                   #departmentInput="ngModel">
+    </p-multiSelect>
+    <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
+      Department is required
+    </div>
+  </div>-->
+            <!--<div class="col-sm-10">
+    <input type="text" class="form-control" id="Department" name="Department" placeholder="Select Departmnet"
+           [(ngModel)]="request.department" readonly [disabled]="viewMode" />
+  </div>-->
           </div>
 
           <div class="form-group row">
