--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
@@ -91,6 +91,15 @@
       </div>
     </div>
 
+    <div class="col col-lg-3" >
+      <div class="card" (click)="navigateTo('obsoletegrid')">
+        <div class="card-body">
+          <i class="fa fa-print"></i>
+          <h5 class="card-title">Obsolete Copies</h5>
+        </div>
+      </div>
+    </div>
+
 
   </div>
 </div>
